further dark mode fixes

--- a/quadratic-client/src/shared/shadcn/styles.css
+++ b/quadratic-client/src/shared/shadcn/styles.css
@@ -137,7 +137,7 @@
     --muted-foreground: 240 5% 64.9%;
     --accent: 240 3.7% 9.9%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
@@ -181,7 +181,7 @@
     --muted-foreground: 240 5% 64.9%;
     --accent: 240 3.7% 8.9%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 0 85.7% 97.3%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
@@ -269,7 +269,7 @@
     --muted-foreground: 217.9 10.6% 64.9%;
     --accent: 215 27.9% 10.9%;
     --accent-foreground: 210 20% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 210 20% 98%;
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
@@ -313,7 +313,7 @@
     --muted-foreground: 240 5% 64.9%;
     --accent: 346.8 3.7% 9.9%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 0 85.7% 97.3%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
